--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -590,7 +590,8 @@
     ")\n",
     "\n",
     "# Start training\n",
-    "trainer.train()\n"
+    "trainer.train()\n",
+    "t"
    ]
   }
  ],
@@ -610,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
